--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -349,7 +349,8 @@
                     <tr>
                       <th><input type="checkbox" id="message-check-all" /></th>
                       <th>序号</th>
-                      <th>用户</th>
+                      <th>发件人</th>
+                      <th>收件人</th>
                       <th>标题</th>
                       <th>内容</th>
                       <th>时间</th>
